@@ -268,6 +268,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP3600 (EXPERIMENTAL)
        Canon PIXMA iP3500 (EXPERIMENTAL)
        Canon PIXMA iP3300 (EXPERIMENTAL)
+       Canon PIXMA MP375R
        Canon PIXMA MP190  (EXPERIMENTAL)
 
      - Epson inkjet printers:
